# Kafka---redpanda

./: Admin_createTopic.py  checkVirtualEnv.py  docker-compose_1-Node.yaml  docker-compose_3-Nodes.yaml  practice.py  producer.py  pyproject.toml  readme.md
Admin/: Admin_createTopic.py
consumer/: avroConsumer.py  consumer.py  jsonconsumer.py
docker compose - redpanda/: docker-compose.yaml
misc/: practice.py
producer/: avroProducer.py  jsonProducer.py  producer.py
schema registry/: schema.json  schema_client_registry.py  tempCodeRunnerFile.py
schema_registry/: avroSchema.avsc  schema_client_registry.py
