[project]
name = "learn-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhigyan Sharma",email = "abhisharmaa3214@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
